--- a/front/packages/ui/public/index.html
+++ b/front/packages/ui/public/index.html
@@ -41,7 +41,14 @@
 <body>
 
  
-  <div class="hero">
+<div class="star"  id="stars"></div>
+   <div class="star"    id="stars2"></div>
+    <div class="star"   id="stars3"></div>
+
+
+  <div class="hero"> 
+
+
     <a href="https://openzeppelin.com/">
       <img  height="100px" weight="100px" src="./favicons/transparent-bg-pegasys-horizontal.png" 
     </a>
@@ -52,8 +59,6 @@
   <div class="wizard-container">
     <oz-wizard class="wizard" data-sync-url="fragment"></oz-wizard>
   </div>
-
- <div id="stars"></div>
 
   <div class="faq">
     <ul>
