--- a/front/packages/ui/public/index.html
+++ b/front/packages/ui/public/index.html
@@ -49,10 +49,10 @@
   <div class="hero"> 
 
 
-    <a href="https://openzeppelin.com/">
-      <img  height="100px" weight="100px" src="./favicons/transparent-bg-pegasys-horizontal.png" 
+    <a >
+      <img  href="https://pegasys.finance/" height="100px" weight="100px" src="./favicons/5.svg" 
     </a>
-    <h1>Contracts Wizard</h1>
+    <h1 href="https://openzeppelin.com/">Contracts Wizard</h1>
     <p>Use the interactive generator below to bootstrap your smart contract and learn about <a href="https://openzeppelin.com/contracts">OpenZeppelin Contracts</a>.</p>
   </div>
 
@@ -83,9 +83,9 @@
       <a href="https://forum.openzeppelin.com/" target="_blank"><img src="icons/forum.svg" alt="forum"></a>
       <a href="https://docs.openzeppelin.com/" target="_blank"><img src="icons/docs.svg" alt="forum"></a>
       <a href="https://github.com/OpenZeppelin/openzeppelin-contracts" target="_blank"><img src="icons/github.svg" alt="forum"></a>
-      <a href="https://twitter.com/openzeppelin/" target="_blank"><img src="icons/twitter.svg" alt="forum"></a>
+      <a href="https://twitter.com/pegasysdex" target="_blank"><img src="icons/twitter.svg" alt="forum"></a>
     </div>
-    <p>© <a href="https://openzeppelin.com" target="_blank">OpenZeppelin</a> 2017-2021 |&nbsp;<a href="https://openzeppelin.com/privacy" target="_blank">Privacy</a> |&nbsp;<a href="https://openzeppelin.com/tos" target="_blank">Terms of Service</a></p>
+    <p>© <a href="pegasys.finance" target="_blank">Pegasys</a> 2022 |&nbsp;<a href="https://openzeppelin.com/privacy" target="_blank">Privacy</a> |&nbsp;<a href="https://openzeppelin.com/tos" target="_blank">Terms of Service</a></p>
   </footer>
 
   <!-- Hidden form necessary for Netlify Forms -->
