--- a/front/packages/ui/public/index.html
+++ b/front/packages/ui/public/index.html
@@ -37,9 +37,10 @@
   <link rel="preload" href="/fonts/silka-semibold-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <link rel='stylesheet' href='/standalone.css'>
   <script async src='/build/embed.js'></script>
+ 
 </head>
 <body>
-
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 <div class="star"  id="stars"></div>
    <div class="star"    id="stars2"></div>
     <div class="star"   id="stars3"></div>
