--- a/front/packages/ui/public/index.html
+++ b/front/packages/ui/public/index.html
@@ -52,7 +52,7 @@
     <a >
       <img  href="https://pegasys.finance/" height="100px" weight="100px" src="./favicons/5.svg" 
     </a>
-    <h1 href="https://openzeppelin.com/">Contracts Wizard</h1>
+    <h1 href="https://openzeppelin.com/">Pegasys Wizard</h1>
     <p>Use the interactive generator below to bootstrap your smart contract and learn about <a href="https://openzeppelin.com/contracts">OpenZeppelin Contracts</a>.</p>
   </div>
 
@@ -64,7 +64,7 @@
     <ul>
       <li>
         <h3>What is this?</h3>
-        <p>Contracts Wizard is an interface to interactively build a smart contract out of components from OpenZeppelin Contracts.</p>
+        <p>Pegasys Wizard is an interface to interactively build a smart contract out of components from OpenZeppelin Contracts.</p>
       </li>
       <li>
         <h3>How can I use this?</h3>
@@ -72,7 +72,7 @@
       </li>
       <li>
         <h3>What can I do with the code?</h3>
-        <p>There’s several options for how to proceed with it that will be useful in different circumstances. “Copy to Clipboard” as well as the standard “Download” will work well with local development workflows (such as using Hardhat or Truffle), whereas “Open in Remix” will be ideal for anyone working on Remix IDE.</p>
+        <p>There’s several options for how to proceed with it that will be useful in different circumstances."Deploy" on Syscoin NEVM Mainnet or Tanenbaum Testnet, “Copy to Clipboard” as well as the standard “Download” will work well with local development workflows (such as using Hardhat or Truffle), whereas “Open in Remix” will be ideal for anyone working on Remix IDE.</p>
       </li>
     </ul>
   </div>
